🐞 fix: Touch problem on mobile phones

--- a/src/components/HomePage/latestNews/postSection/textAbout/textAbout.module.css
+++ b/src/components/HomePage/latestNews/postSection/textAbout/textAbout.module.css
@@ -17,6 +17,7 @@
     line-height: 1.2;
     font-size: 0.9em;
     transition: all 0.3s ease;
+    user-select: none;
 }
 .textMobile:active {
     opacity: 0;
